--- a/MyApplicationSienke/app/build.gradle
+++ b/MyApplicationSienke/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "25.0.2"
 
     defaultConfig {
-        applicationId "com.example.administrator.myapplicationsienke"
+        applicationId "com.example.administrator.thinker_soft"
         minSdkVersion 15
         targetSdkVersion 25
         versionCode 1
