--- a/MyApplicationSienke/app/build.gradle
+++ b/MyApplicationSienke/app/build.gradle
@@ -24,7 +24,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:25.2.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile files('F:/app/ThinkerSoft/MyApplicationSienke/libs/BaiduLBS_Android.jar')
-    compile files('F:/app/ThinkerSoft/MyApplicationSienke/libs/nineoldandroids-2.4.0.jar')
-    compile files('F:/app/ThinkerSoft/MyApplicationSienke/libs/zxing.jar')
+    compile files('E:/APP/thinkersoft/MyApplicationSienke/libs/BaiduLBS_Android.jar')
+    compile files('E:/APP/thinkersoft/MyApplicationSienke/libs/nineoldandroids-2.4.0.jar')
+    compile files('E:/APP/thinkersoft/MyApplicationSienke/libs/zxing.jar')
 }
