--- a/MyApplicationSienke/app/src/main/AndroidManifest.xml
+++ b/MyApplicationSienke/app/src/main/AndroidManifest.xml
@@ -168,6 +168,7 @@
         <activity android:name=".mobile_business.BusinessEmailInfoActivity" android:screenOrientation="portrait"/>
         <activity android:name=".mobile_business.BusinessAnswerEmailActivity" android:screenOrientation="portrait"/>
         <activity android:name=".mobile_business.BusinessIntransitEmailActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".mobile_business.BusinessCheckingIninfoMapActivity" android:screenOrientation="portrait"/>
 
 
         //移动APP
