--- a/MyApplicationSienke/app/build.gradle
+++ b/MyApplicationSienke/app/build.gradle
@@ -37,6 +37,13 @@ android {
         abortOnError   false  // lint 时候终止错误上报，防止编译的时候莫名的失败
     }
 
+    allprojects {
+        repositories {
+            jcenter()
+            maven { url "https://jitpack.io" }
+        }
+    }
+
     sourceSets {
         main {
             jniLibs.srcDirs = ['libs']
@@ -54,9 +61,11 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:25.2.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile files('libs/zxing.jar')
+    compile files('libs/core-3.3.0.jar')
+    compile 'com.rmtheis:tess-two:6.0.0'
+    compile 'com.github.yalantis:ucrop:2.2.1-native'
 }
