--- a/MyApplicationSienke/app/build.gradle
+++ b/MyApplicationSienke/app/build.gradle
@@ -10,6 +10,10 @@ android {
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
+
+        ndk{
+            abiFilters "armeabi"
+        }
     }
 
     signingConfigs {  //签名配置
