--- a/MyApplicationSienke/app/src/main/AndroidManifest.xml
+++ b/MyApplicationSienke/app/src/main/AndroidManifest.xml
@@ -177,7 +177,28 @@
 
         //掌上办公
         <activity
+            android:name=".mobile_business.BusinessFlowInfoOneActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".mobile_business.BusinessFlowOvertimeActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".mobile_business.BusinessFlowEvectionActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".mobile_business.BusinessFlowWorkerActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".mobile_business.BusinessFlowDismissionActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".mobile_business.BusinessFlowLeaveActivity"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".mobile_business.MobileBusinessActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".mobile_business.BusinessSentActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".mobile_business.BusinessNewsActivity"
@@ -268,6 +289,9 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".mobile_business.ReportInfoInfoActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".mobile_business.BusinessNewsInfoActivity"
             android:screenOrientation="portrait" />
 
 
