--- a/MyApplicationSienke/app/build.gradle
+++ b/MyApplicationSienke/app/build.gradle
@@ -66,11 +66,16 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:25.2.0'
+    compile 'com.android.support:appcompat-v7:25.3.0'
+    compile 'com.android.support:recyclerview-v7:25.3.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile files('libs/core-3.3.0.jar')
     compile 'com.rmtheis:tess-two:7.0.0'
     compile 'com.github.yalantis:ucrop:2.2.1-native'
     compile project(':openCVLibrary320')
     compile 'com.baoyz.swipemenulistview:library:1.3.0'
+    compile 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.3-alpha-2'
+    compile 'com.scwang.smartrefresh:SmartRefreshHeader:1.0.3-alpha-2'
+    //没有使用特殊Header，可以不加这行
+    compile 'com.android.support:cardview-v7:25.3.0'
 }
