--- a/MyApplicationSienke/app/build.gradle
+++ b/MyApplicationSienke/app/build.gradle
@@ -12,16 +12,16 @@ android {
         versionName "1.0"
 
         ndk {
-            abiFilters "armeabi",'x86'
+            abiFilters "armeabi", 'x86'
         }
     }
 
     signingConfigs {  //签名配置
         release {  //发布版本签名配置
             storeFile file("thinkerSoft.jks")  //密钥文件路径
-            storePassword  "111111"  //密钥文件密码
-            keyAlias  "ts"  //key 别名
-            keyPassword  "111111"  //key 密码
+            storePassword "111111"  //密钥文件密码
+            keyAlias "ts"  //key 别名
+            keyPassword "111111"  //key 密码
         }
     }
 
@@ -33,12 +33,12 @@ android {
             minifyEnabled true
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-            signingConfig   signingConfigs.release  //设置签名信息
+            signingConfig signingConfigs.release  //设置签名信息
         }
     }
 
     lintOptions {
-        abortOnError   false  // lint 时候终止错误上报，防止编译的时候莫名的失败
+        abortOnError false  // lint 时候终止错误上报，防止编译的时候莫名的失败
     }
 
     allprojects {
@@ -51,26 +51,28 @@ android {
     sourceSets {
         main {
             jniLibs.srcDirs = ['libs']
-        }
-        // Move the build types to build-types/<type>
-        // For instance, build-types/debug/java, build-types/debug/AndroidManifest.xml, ...
-        // This moves them out of them default location under src/<type>/... which would
-        // conflict with src/ being used by the main source set.
-        // Adding new build types or product flavors should be accompanied
-        // by a similar customization.
-        debug.setRoot('build-types/debug')
-        release.setRoot('build-types/release')
-    }
-}
+            // Move the build types to build-types/<typeD
 
-dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:25.2.0'
-    compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile files('libs/core-3.3.0.jar')
-    compile 'com.rmtheis:tess-two:7.0.0'
-    compile 'com.github.yalantis:ucrop:2.2.1-native'
-    compile project(':openCVLibrary320')
-    compile 'com.baoyz.swipemenulistview:library:1.3.0'
+            // For instance, build-types/debug/java, build-types/debug/AndroidManifest.xml, ...
+            // This moves them out of them default location under src/<type>/... which would
+            // conflict with src/ being used by the main source set.
+            // Adding new build types or product flavors should be accompanied
+            // by a similar customization.
+            debug.setRoot('build-types/debug')
+            release.setRoot('build-types/release')
+        }
+    }
+
+
+    dependencies {
+        compile fileTree(include: ['*.jar'], dir: 'libs')
+        testCompile 'junit:junit:4.12'
+        compile 'com.android.support:appcompat-v7:25.2.0'
+        compile 'com.github.bumptech.glide:glide:3.7.0'
+        compile files('libs/core-3.3.0.jar')
+        compile 'com.rmtheis:tess-two:7.0.0'
+        compile 'com.github.yalantis:ucrop:2.2.1-native'
+        compile project(':openCVLibrary320')
+        compile 'com.baoyz.swipemenulistview:library:1.3.0'
+    }
 }
