--- a/MyApplicationSienke/app/build.gradle
+++ b/MyApplicationSienke/app/build.gradle
@@ -51,43 +51,31 @@ android {
     sourceSets {
         main {
             jniLibs.srcDirs = ['libs']
-            // Move the build types to build-types/<typeD
-
-            // For instance, build-types/debug/java, build-types/debug/AndroidManifest.xml, ...
-            // This moves them out of them default location under src/<type>/... which would
-            // conflict with src/ being used by the main source set.
-            // Adding new build types or product flavors should be accompanied
-            // by a similar customization.
-            debug.setRoot('build-types/debug')
-            release.setRoot('build-types/release')
         }
+        // Move the build types to build-types/<type>
+        // For instance, build-types/debug/java, build-types/debug/AndroidManifest.xml, ...
+        // This moves them out of them default location under src/<type>/... which would
+        // conflict with src/ being used by the main source set.
+        // Adding new build types or product flavors should be accompanied
+        // by a similar customization.
+        debug.setRoot('build-types/debug')
+        release.setRoot('build-types/release')
     }
-    dependencies {
-        compile fileTree(include: ['*.jar'], dir: 'libs')
-        testCompile 'junit:junit:4.12'
-        compile 'com.android.support:appcompat-v7:25.3.0'
-        compile 'com.android.support:recyclerview-v7:25.3.0'
-        compile 'com.github.bumptech.glide:glide:3.7.0'
-        compile files('libs/core-3.3.0.jar')
-        compile 'com.rmtheis:tess-two:7.0.0'
-        compile 'com.github.yalantis:ucrop:2.2.1-native'
-        compile project(':openCVLibrary320')
-        compile 'com.baoyz.swipemenulistview:library:1.3.0'
-        compile 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.3-alpha-2'
-        compile 'com.scwang.smartrefresh:SmartRefreshHeader:1.0.3-alpha-2'
-        //没有使用特殊Header，可以不加这行
-        compile 'com.android.support:cardview-v7:25.3.0'
+}
 
-        dependencies {
-            compile fileTree(include: ['*.jar'], dir: 'libs')
-            testCompile 'junit:junit:4.12'
-            compile 'com.android.support:appcompat-v7:25.2.0'
-            compile 'com.github.bumptech.glide:glide:3.7.0'
-            compile files('libs/core-3.3.0.jar')
-            compile 'com.rmtheis:tess-two:7.0.0'
-            compile 'com.github.yalantis:ucrop:2.2.1-native'
-            compile project(':openCVLibrary320')
-            compile 'com.baoyz.swipemenulistview:library:1.3.0'
-        }
-    }
+dependencies {
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    testCompile 'junit:junit:4.12'
+    compile 'com.android.support:appcompat-v7:25.3.0'
+    compile 'com.android.support:recyclerview-v7:25.3.0'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile files('libs/core-3.3.0.jar')
+    compile 'com.rmtheis:tess-two:7.0.0'
+    compile 'com.github.yalantis:ucrop:2.2.1-native'
+    compile project(':openCVLibrary320')
+    compile 'com.baoyz.swipemenulistview:library:1.3.0'
+    compile 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.3-alpha-2'
+    compile 'com.scwang.smartrefresh:SmartRefreshHeader:1.0.3-alpha-2'
+    //没有使用特殊Header，可以不加这行
+    compile 'com.android.support:cardview-v7:25.3.0'
 }
